2005-05-15  Audrius Meskauskas, <AudriusA@Bioinformatics.org>

	* org/omg/CosNaming/BindingIterator.java: Inherit from
	Serializable, IDLEntity and org.omg.CORBA.Object.

2005-05-16  Tom Tromey  <tromey@redhat.com>

	* java/nio/charset/Charset.java (encode, decode): Synchronize on
	'this', not the class.

2005-05-16  Tom Tromey  <tromey@redhat.com>

	* gnu/java/net/protocol/http/Headers.java (parse): Include final
	character of line.

2005-05-16  Tom Tromey  <tromey@redhat.com>

	* java/net/URI.java (unquote): Handle lower-case letters as well.

2005-05-16  Ziga Mahkovec  <ziga.mahkovec@klika.si>

	PR libgcj/20504
	gnu/regexp/RE.java: Add support for quoting constructs.

2005-05-15  Tom Tromey  <tromey@redhat.com>

	* java/lang/String.java (startsWith): Fixed javadoc.

2005-05-15  Mark Wielaard  <mark@klomp.org>

	* javax/swing/JComponent.java: Removed invalid char from comment.

2005-05-15  Audrius Meskauskas, Lithuania  <AudriusA@Bioinformatics.org>

	* org/omg/CORBA/TestContextList.java,
	gnu/CORBA/CDR/testBinaryIO.java: Removing tests from the core.

2005-05-15  Audrius Meskauskas, Lithuania  <AudriusA@Bioinformatics.org>

	* gnu/CORBA/Version.java,
	gnu/CORBA/IOR.java,
	gnu/CORBA/IOR_contructed_object.java,
	gnu/CORBA/Restricted_ORB.java,
	gnu/CORBA/Functional_ORB.java,
	gnu/CORBA/gnuAny.java,
	gnu/CORBA/gnuContext.java,
	gnu/CORBA/gnuContextList.java,
	gnu/CORBA/gnuEnvironment.java,
	gnu/CORBA/gnuExceptionList.java,
	gnu/CORBA/gnuRequest.java,
	gnu/CORBA/gnuNVList.java,
	gnu/CORBA/gnuNamedValue.java,
	gnu/CORBA/Simple_delegate.java,
	gnu/CORBA/BigDecimalHelper.java,
	gnu/CORBA/Unexpected.java,
	gnu/CORBA/OctetHolder.java,
	gnu/CORBA/TypeCodeHelper.java,
	gnu/CORBA/corbaArrayList.java,
	gnu/CORBA/WCharHolder.java,
	gnu/CORBA/WStringHolder.java,
	gnu/CORBA/IOR_Delegate.java,
	gnu/CORBA/fixedTypeCode.java,
	gnu/CORBA/generalTypeCode.java,
	gnu/CORBA/holderFactory.java,
	gnu/CORBA/recordTypeCode.java,
	gnu/CORBA/recursiveTypeCode.java,